# ccsettings

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cascade-rules.md  design-system.md  edit-flow.md  ui-spec.md
docs/superpowers/plans/: 2026-04-17-updater-implementation.md  2026-04-18-about-page-implementation.md
src/: main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: appconfig.rs  backup.rs  cascade.rs  commands.rs  discovery.rs  layers.rs  lib.rs  main.rs  mcp.rs  paths.rs  plugins.rs  writers.rs
src-tauri/tests/: cascade_golden.rs
src-tauri/tests/fixtures/cascade/02_single_layer/: expected.json
src-tauri/tests/fixtures/cascade/03_scalar_override/: expected.json
src-tauri/tests/fixtures/cascade/03_scalar_override/layers/: user.json
src-tauri/tests/fixtures/cascade/04_hooks_append/: expected.json
src-tauri/tests/fixtures/cascade/04_hooks_append/layers/: project-local.json  project.json  user.json
src-tauri/tests/fixtures/cascade/05_permissions_union/: expected.json
src-tauri/tests/fixtures/cascade/05_permissions_union/layers/: project-local.json  project.json  user.json
src-tauri/tests/fixtures/cascade/06_deep_merge_env/: expected.json
src-tauri/tests/fixtures/cascade/06_deep_merge_env/layers/: project.json  user.json
src-tauri/tests/fixtures/cascade/07_plugins_toggles/: expected.json
src-tauri/tests/fixtures/cascade/07_plugins_toggles/layers/: project-local.json  project.json  user.json
src-tauri/tests/fixtures/cascade/08_mcp_servers_mixed/: expected.json
src-tauri/tests/fixtures/cascade/08_mcp_servers_mixed/layers/: project.json  user.json
src-tauri/tests/fixtures/cascade/09_full_5_tier_cascade/: expected.json
src-tauri/tests/fixtures/cascade/09_full_5_tier_cascade/layers/: managed.json  project-local.json  project.json  user.json
src-tauri/tests/fixtures/cascade/10_array_replace_default/: expected.json
src-tauri/tests/fixtures/cascade/10_array_replace_default/layers/: project.json  user.json
src/components/: AboutPane.tsx  AppShell.tsx  BackupsList.tsx  CascadeHeader.tsx  CategoryHeader.tsx  CategoryPicker.tsx  CategoryView.tsx  DiscoverPanel.tsx  EnvEditor.tsx  HooksEditor.tsx  McpEditor.tsx  MemoryEditor.tsx  ModelEditor.tsx  PermissionsEditor.tsx  PluginsEditor.tsx  SaveControls.tsx  Sidebar.tsx  ThemeToggle.tsx  TierPicker.tsx  UnknownKeysPanel.tsx  UpdateBanner.tsx
src/lib/: categories.ts  cn.ts  layers.ts
src/state/: cascade.ts  layerContent.ts  theme.ts  ui.ts  updater.ts  workspaces.ts
(+10 files in other folders)
