[package]
name = "ccsettings"
version = "0.1.0"
description = "GUI to visualize and edit Claude Code settings across system, project, and local tiers"
edition = "2021"

[lib]
name = "ccsettings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Disable debug info for dependencies in dev builds (per project policy).
[profile.dev.package."*"]
debug = false
