[package]
name = "ccsettings"
version = "0.1.0"
description = "GUI to visualize and edit Claude Code settings across system, project, and local tiers"
edition = "2021"

[lib]
name = "ccsettings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
dirs = "6"
walkdir = "2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

# Disable debug info for dependencies in dev builds (per project policy).
[profile.dev.package."*"]
debug = false
