[package]
name = "ccsettings"
version = "0.1.6"
description = "GUI to visualize and edit Claude Code settings across system, project, and local tiers"
edition = "2021"
license = "Apache-2.0"
authors = ["hydai"]
repository = "https://github.com/hydai/ccsettings"

[lib]
name = "ccsettings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
dirs = "6"
walkdir = "2"
tempfile = "3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-human-readable", "formatting", "parsing"] }

# Disable debug info for dependencies in dev builds (per project policy).
[profile.dev.package."*"]
debug = false
